# SameTime

./: .gitignore  BUGS.md  DEPLOY.md  README.md  WEB_FRONTEND_PLAN.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: build.yml
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/src/: config.rs  error.rs  main.rs
server/src/db/: mod.rs
server/src/handlers/: auth.rs  file.rs  mod.rs  room.rs  ws.rs
server/src/models/: message.rs  room.rs  user.rs
server/src/services/: mod.rs  room_manager.rs
server/src/ws/: message.rs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mpv.rs
src/components/chat/: ChatPanel.vue
src/components/common/: Toast.vue
src/components/danmaku/: DanmakuLayer.vue
src/components/player/: VideoPlayer.vue
src/components/room/: MemberList.vue
src/composables/: useSync.ts  useVoice.ts  useWebSocket.ts
src/pages/: Home.vue  Room.vue  Settings.vue
src/platform/: capabilities.ts  config.ts  index.ts  runtime.ts
src/player/: errors.ts  types.ts
src/player/adapters/: index.ts  tauriMpvAdapter.ts  webVideoAdapter.ts
src/router/: index.ts
src/stores/: player.ts  room.ts  user.ts
src/styles/: main.css
src/types/: index.ts
src/utils/: telemetry.ts  toast.ts
